dhall/tests/import/failure/importBoundary.txt
Type error: error: error
 --> <current file>:1:15
  |
1 | \(x: Bool) -> ../data/importBoundary.dhall
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Type error: error: unbound variable `x`
 --> <current file>:1:1
  |
...
3 | x
  | ^ not found in this scope
  |
  |
